--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -19,6 +19,7 @@ body {
 
 /* Custom page header */
 .header {
+  background-color: #55AA55;
   border-bottom: 1px solid #e5e5e5;
   margin-bottom: 10px;
 }
@@ -27,7 +28,9 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
-  padding-bottom: 19px;
+  text-align: center;
+  padding: 1.5em;
+  //color: white;
 }
 
 /* Custom page footer */
@@ -37,6 +40,9 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
+.container {
+  background-color: white;
+}
 .container-narrow > hr {
   margin: 30px 0;
 }
@@ -80,4 +86,13 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+h1 {
+  color: #2D882D;
+}
+
+table tbody tr:hover,
+.table-striped > tbody > tr:nth-of-type(2n+1):hover {
+  background-color: #55AA55;
 }
