--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -30,7 +30,7 @@ body {
   line-height: 40px;
   text-align: center;
   padding: 1.5em;
-  //color: white;
+  color: white;
 }
 
 /* Custom page footer */
